--- a/index.html
+++ b/index.html
@@ -6,13 +6,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Weather App JS</title>
     <link rel="stylesheet" href="main.css">
+    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC9hZQ2L26B2ePMPgDvS3a4JI1W5eD7mNg&libraries=places"></script>
+
 </head>
 <body>
     <div class="app-wrap">
         <h2>Find Weather</h2>
         <header>
-            <input type="text" autocomplete="off" class="search-box"
+            <input type="text" autocomplete="on" class="search-box" id="locationTextField"
             placeholder="Search for a city...">
+            <script>
+                function init() {
+                    var input = document.getElementById('locationTextField');
+                    var autocomplete = new google.maps.places.Autocomplete(input);
+                }
+    
+                google.maps.event.addDomListener(window, 'load', init);
+        </script>
+
         </header>
         <main>
             <section class="location">
